Fixed redundant alt text error in some components and contrast error in AD button

--- a/src/components/VideoPlayer/VideoPlayer.css
+++ b/src/components/VideoPlayer/VideoPlayer.css
@@ -12,6 +12,7 @@
   background-color: #122245;
   border: 1px solid #fff;
   border-radius: 15px;
+  color: #fff;
 
   &:hover {
     background-color: #0d1a33;
